# grafana-stocks

./: .gitignore  README.md
deploy/: docker-compose.yaml
deploy/config/env/: .env.sample
deploy/config/grafana/provisioning/dashboards/: binance.json  bitfinex.json  metrics.json
deploy/config/grafana/provisioning/datasources/: datasource.yaml
src/: .gitignore  Dockerfile  main.py  pylint.toml  pyproject.toml
src/schemas/: base.py  binance.py  bitfinex.py
src/services/: base.py  binance.py  bitfinex.py
src/utils/: influx.py  metrics.py
